# CausalNetTwin

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.sha256  README.md  pyproject.toml  references.bib  requirements.txt
docs/: architecture.md  experiment_design.md  index.html  novelty_review.md  reproduction.md  safety_contract.md  telemetry_schema.md
experiments/: run_benchmark.py
results/: benchmark_report.md  benchmark_summary.csv  confidence_intervals.csv  pytest_output.txt  scenario_results.csv  trial_results.csv
scripts/: run_all.ps1  run_all.sh
src/causalnettwin/: __init__.py  analysis.py  cli.py  config.py  rollback.py  safety.py  simulator.py
tests/: test_reproducibility.py  test_rollback.py  test_safety.py
