[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causalnettwin"
version = "0.1.0"
description = "Counterfactual network digital twin research artifact for safe agentic remediation"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pandas>=2.0", "scipy>=1.10"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
causalnettwin-benchmark = "causalnettwin.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
